--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,17 +12,17 @@ body:
   - type: textarea
     id: what-happened
     attributes:
-      label: What happened?
-      description: What did you do, what did you expect to happen, and what actually happened?
-      placeholder: Tell us what you see!
+      label: "What happened?"
+      description: "What did you do, what did you expect to happen, and what actually happened?"
+      placeholder: "Tell us what you see!"
     validations:
       required: true
 
   - type: textarea
     id: steps-to-reproduce
     attributes:
-      label: Steps to reproduce
-      description: Be precise and include which command you used (Control Luxafor or menubar) and the color/pattern.
+      label: "Steps to reproduce"
+      description: "Be precise and include which command you used (Control Luxafor or menubar) and the color/pattern."
       placeholder: |
         1. Open Raycast → Control Luxafor (or use menubar)
         2. Set color to Red
@@ -33,68 +33,76 @@ body:
   - type: textarea
     id: expected
     attributes:
-      label: Expected behavior
+      label: "Expected behavior"
+      description: "What did you expect to happen?"
+      placeholder: "Describe the expected outcome."
     validations:
       required: true
 
   - type: textarea
     id: screenshots
     attributes:
-      label: Screenshots or recordings
-      description: Drag-and-drop images or videos that show the issue.
+      label: "Screenshots or recordings"
+      description: "Drag-and-drop images or videos that show the issue."
+      placeholder: "Attach screenshots or recordings if available."
     validations:
       required: false
 
   - type: input
     id: raycast-version
     attributes:
-      label: Raycast version
-      placeholder: e.g. 1.77.0
+      label: "Raycast version"
+      description: "The version of Raycast you are using."
+      placeholder: "e.g. 1.77.0"
     validations:
       required: true
 
   - type: input
     id: macos-version
     attributes:
-      label: macOS version
-      placeholder: e.g. 14.5 (Sonoma)
+      label: "macOS version"
+      description: "The version of macOS you are running."
+      placeholder: "e.g. 14.5 (Sonoma)"
     validations:
       required: true
 
   - type: input
     id: extension-version
     attributes:
-      label: Extension version
-      placeholder: e.g. 1.1.0
+      label: "Extension version"
+      description: "The version of the Luxafor Controller extension."
+      placeholder: "e.g. 1.1.0"
     validations:
       required: true
 
   - type: dropdown
     id: api-endpoint
     attributes:
-      label: Preference – API Endpoint
+      label: "Preference – API Endpoint"
+      description: "Which API endpoint are you using?"
       options:
         - api.luxafor.com
         - api.luxafor.co.uk
+      default: api.luxafor.com
     validations:
       required: false
 
   - type: textarea
     id: logs
     attributes:
-      label: Logs (if any)
-      description: Paste any relevant logs. Please redact sensitive data.
+      label: "Logs (if any)"
+      description: "Paste any relevant logs. Please redact sensitive data."
       render: shell
+      placeholder: "Paste logs here."
     validations:
       required: false
 
   - type: checkboxes
     id: checks
     attributes:
-      label: Checks
-    options:
-      - label: I am using the latest version of the extension
-        required: true
-      - label: I searched existing issues and did not find a duplicate
-        required: true
-
+      label: "Checks"
+      options:
+        - label: "I am using the latest version of the extension"
+          required: true
+        - label: "I searched existing issues and did not find a duplicate"
+          required: true
