--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,5 +1,5 @@
 name: 📝 Task
-description: Track a specific task or sub-task of a milestone
+description: Track a specific task or sub-task for the Luxafor Controller roadmap
 title: "[Task]: "
 labels: ["task"]
 assignees: ["@smcnab1"]
@@ -10,7 +10,7 @@ body:
     attributes:
       label: Summary
       description: What needs to be done? Keep it short and actionable.
-      placeholder: e.g. "Add CSS parser to import `linear-gradient(...)` strings"
+      placeholder: e.g. "Add support for startup colour preference (restore last colour on launch)"
     validations:
       required: true
 
@@ -18,23 +18,24 @@ body:
     id: milestone
     attributes:
       label: Milestone
-      description: Which roadmap version does this task belong to?
+      description: Which Luxafor Controller version does this task belong to?
       options:
-        - 1.2.0 — Presets & CSS Import
-        - 1.3.0 — Better Colour Control
-        - 1.4.0 — Animation & Assets
-        - 1.5.0 — Share & Sync
-        - 1.6.0 — Power-User Features
+        - 1.1.0 — Preferences & Shortcuts
+        - 1.2.0 — Quick Actions & Menubar
+        - 1.3.0 — Presets & Schedules
+        - 1.4.0 — Device Enhancements
+        - 1.5.0 — Integrations & Automation
         - Backlog / Ideas
+        - Technical Improvements
     validations:
-      required: false
+      required: true
 
   - type: textarea
     id: details
     attributes:
       label: Details
       description: Add more context, notes, or references if needed.
-      placeholder: Steps, design notes, or technical considerations
+      placeholder: Steps, design notes, device API considerations, or UI/UX notes
     validations:
       required: false
 
