fix: remove stray raycast-src folder

--- a/.github/workflows/sync-raycast-extension.yml
+++ b/.github/workflows/sync-raycast-extension.yml
@@ -31,6 +31,10 @@ jobs:
           git config user.name  "smcnab1"
           git config user.email "108990188+smcnab1@users.noreply.github.com"
 
+      # Ensure the source checkout dir is never staged
+      - name: Ignore raycast-src folder (local exclude)
+        run: echo "raycast-src/" >> .git/info/exclude
+
       - name: Sync selected files
         run: |
           set -euo pipefail
@@ -65,16 +69,25 @@ jobs:
             fi
           done
 
+      # Extra safety: remove the source folder before we stage/commit
+      - name: Clean up source folder
+        run: rm -rf raycast-src
+
       - name: Commit & push to main (if changes)
         id: commit
         run: |
           if ! git diff --quiet; then
+            # capture list of changed files for summary
+            git status --porcelain | awk '{print $2}' > /tmp/changed_files.txt
+            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "files<<EOF" >> $GITHUB_OUTPUT
+            cat /tmp/changed_files.txt >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+
             git add -A
             git commit -m "chore(sync): update selected files from raycast-extension"
             git push origin main
-            echo "changed=true" >> $GITHUB_OUTPUT
           else
-            echo "No changes to commit."
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
@@ -90,8 +103,12 @@ jobs:
             echo "- **Commit pushed:** ${{ steps.commit.outputs.changed }}"
             echo ""
             if [ "${{ steps.commit.outputs.changed }}" = "true" ]; then
-              echo "✅ Changes were synced and pushed to **main**."
+              echo "### ✅ Files updated"
+              echo ""
+              while IFS= read -r f; do
+                [ -n "$f" ] && echo "- \`$f\`"
+              done <<< "${{ steps.commit.outputs.files }}"
             else
               echo "ℹ️ No changes to sync."
             fi
-          } >> $GITHUB_STEP_SUMMARY
+          } >> "$GITHUB_STEP_SUMMARY"
